deploy/keycloak/deployment.yml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "keycloak"
  # namespace: "development"
spec:
  selector:
    matchLabels:
      app: "keycloak"
  replicas: 1
  strategy:
    type: "RollingUpdate"
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: "keycloak"
    spec:
      containers:
        - name: "keycloak"
          # image: "quay.io/keycloak/keycloak:8.0.2"
          # TODO: update keycloak to latest
          image: "quay.io/keycloak/keycloak:latest"
          imagePullPolicy: "Always"
          ports:
            - name: "http"
              containerPort: 8080

            - name: "https"
              containerPort: 8443
          readinessProbe:
            httpGet:
              path: "/auth/realms/master"
              port: 8080
