deploy/keycloak/ingress.yml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "keycloak-ingress"
  # namespace: "development"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: "iankirkpatrick.dev"
      http:
        paths:
          - path: "/keycloak/(.*)"
            pathType: "ImplementationSpecific"
            backend:
              service:
                name: "keycloak"
                port:
                  number: 53582
